add the send inactive user mail reminder  endpoint
